--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.6.2",
+    "@types/react": "~18.0.27",
     "expo": "^48.0.4",
     "expo-constants": "~14.2.1",
     "expo-linking": "~4.0.1",
@@ -16,10 +18,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-web": "~0.18.7"
+    "react-native-tab-view": "^3.5.1",
+    "react-native-web": "~0.18.7",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
